# Dot-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  conandata.yml  conanfile.py
.cursor/plans/: DOD File Naming Convention-58d2b22a.plan.md  Data Validation Layer-6a5e7284.plan.md  DotData Module-0eac70b4.plan.md  Sparse-Set-Driven ECS.plan.md
.cursor/rules/: ecs.mdc  project.mdc  shaders.mdc
DotEngine/: CMakeLists.txt
DotEngine/Application/: CMakeLists.txt
DotEngine/Application/src/: Application.cpp  Application.h  ApplicationContext.h  DotEngine.h  EntryPoint.h
DotEngine/Backend/Metal/: CMakeLists.txt
DotEngine/Backend/Metal/src/: MetalBuffer.cpp  MetalContext.cpp  MetalContext.h  MetalImplementations.cpp  MetalRender.cpp  MetalShader.cpp
DotEngine/Backend/OpenGL/: CMakeLists.txt
DotEngine/Backend/OpenGL/src/: OpenGLBuffer.cpp  OpenGLContext.cpp  OpenGLContext.h  OpenGLRender.cpp  OpenGLShader.cpp
DotEngine/Data/: CMakeLists.txt
DotEngine/Data/src/: DotData.h
DotEngine/Data/src/Reflection/: Reflect.h
DotEngine/Data/src/Serialization/: BinarySerializer.h  JsonSerializer.h
DotEngine/Data/src/Storage/: StorageLayer.cpp  StorageLayer.h  StoragePaths.h
DotEngine/Data/src/Validation/: BinarySchemaValidator.h  JsonSchemaValidator.h  SchemaFromReflection.h  Validator.h
DotEngine/Data/src/Versioning/: DataVersion.h
DotEngine/Editor/: CMakeLists.txt
DotEngine/Editor/src/: EditorContext.h  EditorEventSystem.cpp  EditorEventSystem.h  EditorPanelSystem.cpp  EditorPanelSystem.h  EditorSystem.cpp  EditorSystem.h
DotEngine/EngineCore/: CMakeLists.txt
DotEngine/EngineCore/src/: CoreTypes.h  EngineContext.h  GraphicsContext.h  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseButtonCodes.h  Platform.h  PlatformInterface.h  Window.h  WindowTypes.h
DotEngine/EngineCore/src/Events/: EventQueue.h  EventSystem.cpp  EventSystem.h  EventTypes.h
DotEngine/GameInput/: CMakeLists.txt
DotEngine/GameInput/src/: GameInputSystem.cpp  GameInputSystem.h  GameInputTypes.h
DotEngine/Platform/Mac/: CMakeLists.txt
DotEngine/Platform/Mac/src/: MacInput.cpp  MacWindow.cpp
DotEngine/Platform/Windows/: CMakeLists.txt
DotEngine/Platform/Windows/src/: WindowsInput.cpp  WindowsWindow.cpp
DotEngine/Renderer/: CMakeLists.txt
DotEngine/Renderer/src/: BufferSystem.h  RenderSystem.h  RenderTypes.h  ShaderSystem.h
DotEngine/UI/: CMakeLists.txt
DotEngine/UI/src/: ImGuiLayer.cpp  ImGuiLayer.h  UISystem.cpp  UISystem.h
DotEngine/src/DotEngine/: Application.cpp  Application.h  EntryPoint.h  Input.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.h  Window.h
DotEngine/src/DotEngine/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h
DotEngine/src/DotEngine/Renderer/: Buffer.cpp  GraphicsContext.h  Renderer.h
DotEngine/src/Platform/Mac/: MacInput.cpp  MacInput.h  MacWindow.cpp  MacWindow.h
DotEngine/src/Platform/Metal/: MetalContext.cpp  MetalContext.h  MetalImplementations.cpp
DotEngine/src/Platform/OpenGL/: OpenGLContext.cpp  OpenGLContext.h
DotEngine/src/Platform/Windows/: WindowsMac.cpp  WindowsMac.h  WindowsWindow.cpp  WindowsWindow.h
Resources/: world_single_explanation.md
Sandbox/: CMakeLists.txt
Sandbox/src/: SandBoxApp.cpp
Sandbox/src/editor/: DemoPanel.cpp  DemoPanel.h  DockSpacePanel.cpp  DockSpacePanel.h  ExamplePanel.cpp  ExamplePanel.h  SandboxEditorTypes.h
